force-app/main/default/objects/Client_Search_Filter__mdt/Client_Search_Filter__mdt.object-meta.xml
<CustomObject>
    <label>Client Search Filter</label>
    <pluralLabel>Client Search Filters</pluralLabel>
</CustomObject>