force-app/main/default/objects/Client_Search_Filter__mdt/fields/Lookup_Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Display_Fields__c</fullName>
    <inlineHelpText>Comma separated API name of the fields of that object that is being searched</inlineHelpText>
    <label>Lookup Display Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>