force-app/main/default/objects/Client_Search_Filter__mdt/fields/Lookup_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Where_Clause__c</fullName>
    <label>Lookup Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>