force-app/main/default/objects/Client_Search_Filter__mdt/fields/Max_Lookup_Record_Selection__c.field-meta.xml
<CustomField>
    <fullName>Max_Lookup_Record_Selection__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Max Lookup Record Selection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>