force-app/main/default/objects/Client_Search_Filter__mdt/fields/Related_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_API_Name__c</fullName>
    <inlineHelpText>required of we are creating a record for related object filter like Account.Type__c</inlineHelpText>
    <label>Related Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>