force-app/main/default/objects/Client_Search_Filter__mdt/fields/UI_Type__c.field-meta.xml
<CustomField>
    <fullName>UI_Type__c</fullName>
    <label>UI Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>MultiPicklist</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>