force-app/main/default/objects/Client_Search_Filter__mdt/validationRules/Lookup_required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Lookup_required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(UI_Type__c)=&apos;Lookup&apos;,
				OR(ISBLANK(Lookup_Display_Fields__c),
														 ISBLANK(Lookup_Where_Clause__c)))</errorConditionFormula>
    <errorMessage>For lookup, Please fill the Lookup Where Clause and Look up display fields</errorMessage>
</ValidationRule>