force-app/main/default/objects/Client_Search_Filter__mdt/listViews/New_List_View.listView-meta.xml
<ListView>
    <fullName>New_List_View</fullName>
    <columns>Sequence__c</columns>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Related_Object_API_Name__c</columns>
    <columns>UI_Type__c</columns>
    <columns>Lookup_Display_Fields__c</columns>
    <columns>Lookup_Where_Clause__c</columns>
    <columns>Max_Lookup_Record_Selection__c</columns>
    <filterScope>Everything</filterScope>
    <label>New List View</label>
    <language>en_US</language>
</ListView>